build: add new profile for ci